assets/css/portrait.css
/* Nav lists */

nav#masthead {
  margin: -1rem -2rem 2rem;
  padding: 0 2rem 1rem;
  border-bottom: 1px solid var(--c-line);
}

nav#masthead li,
nav#page-projects li {
  margin-right: 1rem;
  display: inline-block;
}

nav#projects {
  margin-bottom: 4rem;
}

nav#projects ul:not(.all) li:not(.viewing) {
  display: none;
}

nav#page-images {
  display: none;
}

nav#page-projects {
  margin-top: 4rem;
}

body:not(.info) nav#details {
  display: none;
}

nav#details {
  padding: 1rem 2rem;
  position: absolute;
  top: 0;
  right: 0;
}

nav#details li {
  margin-left: 1rem;
  display: inline-block;
}



/* Gallery */

div#gallery li {
  margin: 2rem -2rem;
  padding: 0 2rem;
}

@media (prefers-color-scheme: light) {
  div#gallery li {
    margin: 0 -2rem;
    padding: 2rem;
  }

  div#gallery li:not(.flat):not(.dark-bg) + li:not(.flat):not(.dark-bg),
  div#gallery li.flat + li.flat,
  div#gallery li.dark-bg + li.dark-bg {
    padding-top: 0;
  }

  div#gallery li:first-of-type.flat {
    padding-top: 0;
  }

  div#gallery li:last-of-type.flat:not(.dark-bg) {
    padding-bottom: 0;
  }
}

div#gallery img {
  max-width: 100%;
}

div#gallery div.text {
  padding-top: 2rem;
  font-size: 1.25rem;
}

div#gallery li.grid div {
  grid-gap: .5rem;
  grid-template-columns: var(--grid-p);
}

p#waiting {
  display: none;
}



/* About page */

section#bio ul {
  margin-top: 2rem;
}



/* CV */

section#cv ul {
  margin-top: 2rem;
}

section#cv h2 {
  margin-top: 2rem;
}

section#cv h3 {
  margin-top: 1rem;
}

section#cv li {
  margin-top: .5rem;
}

section#cv hr {
  display: none;
}

